--- a/src/makefile-tinis.IC
+++ b/src/makefile-tinis.IC
@@ -54,15 +54,15 @@ inputmodules.o scatteringfactors.o in.o out.o readinput.o \
 readcif.o experimentalsetup.o imagesetup.o montagesetup.o refineutils.o \
 structurefactorsetup.o ciftbx.o hash_funcs.o eigen.o invert.o microscopy.o \
 diffractionpatterndefinitions.o diffractionpatterninitialisation.o crystallographyinitialisation.o \
-crystallography.o bloch.o Ug.o image.o errorchecks.o writeoutput.o dqng.o xerror.o d1mach.o
+crystallography.o bloch.o Ug.o image.o errorchecks.o writeoutput.o quadpack_double.o
 
 REFINEOBJECTFILES = gmodules.o smodules.o inputmodules.o message.o errorcodes.o felixrefine.o util.o \
 scatteringfactors.o in.o out.o readcif.o \
 experimentalsetup.o imagesetup.o montagesetup.o structurefactorsetup.o readinput.o\
 eigen.o invert.o microscopy.o diffractionpatterndefinitions.o diffractionpatterninitialisation.o \
 crystallographyinitialisation.o crystallography.o bloch.o Ug.o image.o ciftbx.o simplex.o\
-hash_funcs.o RefineWriteOut.o felixfunction.o refineutils.o writeoutput.o dqng.o xerror.o d1mach.o errorchecks.o\
-symmetry.o
+hash_funcs.o RefineWriteOut.o felixfunction.o refineutils.o writeoutput.o errorchecks.o\
+symmetry.o quadpack_double.o
 
 %.o: %.f90
 	$(F90) $(F90FLAGS) -DF90 -c $< -I$(INCLUDEDIR) $(LIBFLAGS)
