--- a/circle.yml
+++ b/circle.yml
@@ -16,8 +16,8 @@ checkout:
     
 compile:
   override:
-    - cd ../felix-${CIRCLE_SHA1}/;pwd;echo "PLATFORM=INT64NGNU" >>src/user.mk; make clean; make; #make clean; pwd; ls -al
-    - cd ../felix-${CIRCLE_SHA1}/;pwd;echo "PLATFORM=INT64Nifort" >>src/user.mk; make clean; make; #make clean; pwd; ls -al
+    - cd ../felix-${CIRCLE_SHA1}/;pwd;echo "PLATFORM=INT64NGNU" >>user.mk; make clean; make; #make clean; pwd; ls -al
+    - cd ../felix-${CIRCLE_SHA1}/;pwd;echo "PLATFORM=INT64Nifort" >>user.mk; make clean; make; #make clean; pwd; ls -al
 
 test:
   pre:
