--- a/src/makefiles/makefile.includeINT64Nifort
+++ b/src/makefiles/makefile.includeINT64Nifort
@@ -43,13 +43,13 @@ LONGINTEGER=
 
 # -------------------------------
 # which PLATFORM dependent libraries to link
-LIBS= -lopenblas -mkl=sequential -lfftw3
+LIBS= -mkl=sequential -lfftw3
 
 # -------------------------------
 # which fortran compiler is used
 F90=mpiifort
 # its flags
-F90FLAGS= -132 -r8 -u -C -g -traceback -check noarg_temp_created -lopenblas#orac
+F90FLAGS= -132 -r8 -u -C -g -traceback -check noarg_temp_created #orac
 #F90FLAGS= -O0 -fpp -r8 -g -132 -check all -warn all -fpe0 -traceback #debug 
 #F90FLAGS = -O3 -r8 -u -traceback -static-intel # -ipo release
 #F77FLAGS = -r8 #debug
